--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.2.1"
   },
-  "homepage": "https://gazijarin.com"
+  "homepage": "https://BrandeisPatrick.github.io/Luona-profolio"
 }
